--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -19,7 +19,7 @@
 }
 
 .content {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/asset/img/background.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("./asset/img/background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin-left: 16.566667%;
